--- a/webapp/WEB-INF/views/includes/header.html
+++ b/webapp/WEB-INF/views/includes/header.html
@@ -22,7 +22,7 @@
 		<div id="nav">
 			<ul>
 				<li><a href="../together/together.html">함께하기</a></li>
-				<li><a href="../board/board.html">게시판</a></li>
+				<li><a href="../board/board.html">소통하기</a></li>
 				<li><a href="../best/bestPlus.html">베스트</a></li>
 				<li><a href="../map/map.html">지도</a></li>
 			</ul>
