--- a/webapp/assets/css/best.css
+++ b/webapp/assets/css/best.css
@@ -7,8 +7,8 @@
 #wrap {max-width:1200px;}
 #wrap>#content {padding: 10px 0px; margin-bottom: 150px;}
 
-/*-------------------------------------------------------- 베스트 -------------------------------------------------------- */
-/* context header */
+
+/*--------------------------- 베스트 상세페이지 --------------------------- */
 #wrap h1{
 	font-family: 'Nanum Gothic';
 	font-size: 46px;
@@ -16,41 +16,194 @@
 	text-align : center;
 	margin: 80px, 0px, 64px, 0px;
 	letter-spacing: -1px;
+	padding-top: 50px;	
 }
 
-.img-line span {
+
+/* ----------- main list(좋아요,즐찾,기록) ----------- */
+table, tr, td {
+	border: 1px solid;
+}
+
+table {
+	border:none;
+	margin: 40px 0px 0px 350px;
+	text-align: center;
+	display: inline-block;
+}
+
+table td {
+	padding: 20px 60px 20px;	
+}
+
+table td:hover {
+	background-color: #000000;
+	color: #fff;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+
+/* ------------- 종목테그 ------------- */
+.best-mini-list {
+	font-size: 12px;
+	float: right;
+	margin: 50px 50px 10px;
+}
+
+.best-mini-list p {
+	padding-left: 280px;
+	padding-bottom: 5px; 
+}
+
+.best-mini-list ul{
+	margin-left: 30px;
+}
+
+.best-mini-list li {
+	display: inline;
+	padding-left: 5px;
+	}
+
+.best-mini-list li span:hover {
+	color: rgb(255, 52, 120);
+	font-weight: bold;
+}	
+
+/* hr(nav) 라인 */
+#hr {
+	width: 1100px;
+}
+
+/*------------------------- Top1~3 -------------------------*/
+.img-total .img-1{		
+	padding: 0px 20px 0px;
+}
+	
+.img-total .img-1 p {
+	font-size: 20px;
+	font-weight: bold;
+	display: inline;
+	margin-right:110px;
+	margin-left: 175px;
+	text-align: center;
+}
+
+/* new(1주일 이내 올라온 게시물 띄워주기) */
+#new {
 	color: rgb(255, 52, 120);
 }
-
-#best-text {		/* 지역, 거리 */
-	font-size: 14px;
-	color:  rgb(101, 101, 101);
-	text-align : center;
-	margin-bottom: 50px;
-	padding: 0px;	
+	
+/* 왕관 이미지 */	
+.img-total .img-1 img{
+	width: 30px;
+	height: 30px; 
+	margin-top: 30px;
 }
 
-.footer {
-	clear: both;
+/*--------------------- 이미지 ---------------------*/
+.img-list {
+	float: left;
+	padding-left: 30px;
 }
 
-.best {
-	margin-right: 35px;
-}
-
-/* 사진 */
-.best-listtext .best-list img {
+.img-line img {
 	width: 350px;
 	height: 280px;
-	margin: 0px 0px 0px 30px;
-
-}
-
-.best-list {
-	float: left;
+	margin: 0px 0px 0px 12px;
 	display: block;
 }
 
-.best {	/* 사진 가운데 정렬 */
-	margin-left: 0px;	
+.img-line img:hover {
+	transform: scale( 1.1 );
+
+	}
+
+/* 지역, 거리 설정*/
+#best-text {		
+	font-size: 14px;
+	color:  rgb(101, 101, 101);
+	display: block;
+	text-align: center;
+	margin: 10px 0px 10px 40px;
+}
+
+/*------------------------- 댓글 comment -------------------------*/
+.comment-text {
+	width: 80px;
+	padding: 0px 35px 50px;
+	text-align: left;
+	display: inline;
+	
+}
+
+.comment-text input {
+	margin-top: 3px;
+}
+
+.comment-text1{
+	width: 340px;
+	height: 0 auto;
+	border:1px solid rgb(101, 101, 101);
+	border-radius: 2px;
+	margin-top: 3px;
+	margin-left: 17px;
+	padding: 2px;
+}
+
+/* 후기 좋아요 Total */
+.button-ttl {
+	margin-left: 20px;
+	padding-bottom: 30px;
+}
+
+/* 후기 : _개 */
+.button-ttl span {
+	float: left;
+	margin-top: 5px;
+}
+
+.button-ttl .imgbutton-text {
+	margin-left: 3px;
+	color: 진한 회색 rgb(101, 101, 101);
+}
+
+/* 좋아요 개수 */
+.imgbutton {
+	margin-bottom: 20px;	
+}
+
+.imgbutton img {
+	height: 18px;
+	width: 18px;
+	margin-top: 5px;
+	float: left;
+}
+
+.imgbutton span {
+	font-size: 14px;
+	float: left;
+	margin-top: 5px;
+	margin-left: 3px;
+}
+
+/*------------------------- Top 4~15 -------------------------*/
+
+#img-line-p {
+	font-size: 20px;
+	text-align: left;
+	width:170px;
+	
+	/* 위치 */
+	margin-left: 40px;
+	margin-top: 10px;
+}
+
+#img-line-span {
+	color: rgb(255, 52, 120);
+}
+
+/* footer */
+.footer {
+	clear: both;
 }
