지도에 거리표시

--- a/webapp/assets/css/course-write.css
+++ b/webapp/assets/css/course-write.css
@@ -168,6 +168,15 @@ input[type="radio"]+label img {
 	color: rgb(136, 136, 136);
 	margin-bottom: 12px;
 }
+/* 지도 커스텀 오버레이 */
+.dot {overflow:hidden;float:left;width:12px;height:12px;background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/mini_circle.png');}    
+.dotOverlay {position:relative;bottom:10px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;font-size:12px;padding:5px;background:#fff;}
+.dotOverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}    
+.number {font-weight:bold;color:rgb(255, 52, 120);}
+.dotOverlay:after {content:'';position:absolute;margin-left:-6px;left:50%;bottom:-8px;width:11px;height:8px;background:url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white_small.png')}
+.distanceInfo {position:relative;top:5px;left:5px;list-style:none;margin:0;}
+.distanceInfo .label {display:inline-block;width:50px;color:#333333;font-size:12px;padding:0px;}
+.distanceInfo:after {content:none;}
 
 
 /* -------------------코스정보----------------------- */
