--- a/webapp/assets/css/best.css
+++ b/webapp/assets/css/best.css
@@ -19,7 +19,6 @@
 	padding-top: 50px;	
 }
 
-
 /* ----------- main list(좋아요,즐찾,기록) ----------- */
 table, tr, td {
 	border: 1px solid;
@@ -79,7 +78,8 @@ table td:hover {
 .img-total .img-1{		
 	padding: 0px 20px 0px;
 }
-	
+
+/* Top 1-3 글 */		
 .img-total .img-1 p {
 	font-size: 20px;
 	font-weight: bold;
@@ -190,6 +190,7 @@ table td:hover {
 /*------------------------- Top 4~15 -------------------------*/
 
 #img-line-p {
+	font-weight: bold;
 	font-size: 20px;
 	text-align: left;
 	width:170px;
