--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -44,7 +44,7 @@
 /*--------------------------- 사진 편집 ----------------------------*/		
 .slide {
 	margin: auto;
-	width: 1500px;
+	width: 100%;
 	height: 800px;
 	/* slide_button의 position absolute가 컨테이너 안쪽에서 top, left, right offset이 적용될 수 있도록 relative를 준다. (기본값이 static인데, static인 경우 그 상위 컨테이너로 나가면서 현재 코드에선 html을 기준으로 offset을 적용시키기 때문) */
 	position: relative;
@@ -61,7 +61,7 @@
 }
 
 .slide img {
-	width: 1500px;
+	width: 100%;
 	height: 800px;
 }
 
@@ -77,7 +77,7 @@
   left: 0px;
 
   /* size - 없으면 크기에 따라 다음 사진이 보임 */
-    width: 1500px;
+    width: 100%;
     height: 800px;
     
   /* flex item의 flex-shrink는 기본값이 1이므로 컨테이너 크기에 맞게 줄어드는데, 슬라이드를 구현할 것이므로 줄어들지 않도록 0을 준다. */
