--- a/webapp/assets/css/course-view.css
+++ b/webapp/assets/css/course-view.css
@@ -50,7 +50,7 @@ input[type=radio] {display:none;}
 #content .course-view .course-view-info {
 	padding: 20px 32px;
 	width: 100%;
-	height: 600px;
+	height: 630px;
 	/* height: auto; */
 	border: 1px solid rgb(174, 174, 174);
 }
@@ -60,7 +60,11 @@ input[type=radio] {display:none;}
 .course-view-info .course-info-content {
 	padding-bottom: 25px;
 	border-bottom: 1px solid rgb(101, 101, 101);
-	height: 190px;
+	height: 220px;
+}
+.course-view-info .course-info-content .course-option {
+	height: 20px;
+	margin-bottom: 5px;
 }
 .course-view-info .record-status {
 	height: 300px;
@@ -72,6 +76,45 @@ input[type=radio] {display:none;}
 	position: fixed;
 	bottom: 0;
 }
+/* 옵션 */
+.course-info-content .course-option {
+	vertical-align: middle;
+}
+.course-option span {
+	vertical-align: top;
+}
+.course-option .btn-group button {
+	width: 17px;
+	height: 17px;
+	padding: 0px;
+	border: 1px solid transparent;
+}
+.course-option .btn-group ul li a {
+	font-size: 16px;
+}
+.modal-body {
+	align-items: center;
+}
+.modal-body input[type="radio"]+label {
+	display: inline-block;
+	text-align: center;
+	width: 82px;
+	line-height: 46px;
+	margin:0px 20px;
+}
+.modal-body input[type="radio"]+label{
+	padding: 0px 15px;
+	color: rgb(102, 102, 102);
+	border: 1px solid rgb(217, 217, 217);
+	border-radius: 3px;
+	background-color: rgb(255,255,255);
+}
+.modal-body input[type="radio"]:checked+label {
+	color: rgb(255,255,255);
+	border-color: rgb(50, 108, 249);
+	background-color: rgb(50, 108, 249);
+}
+
 /* 타이틀 */
 .course-info-content h2 {
 	display: inline-block;
@@ -82,14 +125,9 @@ input[type=radio] {display:none;}
 	text-align:center;
 	margin-bottom: 5px;
 }
-.course-info-content h2 img {
-	width: 24px;
-	height: 24px;
-	margin-right: 10px;
-}
 .course-info-content #bookmark {
 	position: relative;
-	top: 5px;
+	top: 3px;
 }
 /* 이름, 글정보 */
 .course-info-content .article-info {
@@ -209,7 +247,7 @@ input[type=radio] {display:none;}
 	height: 20px;
 }
 .course-view-info .record-info-content {
-	height: 460px;
+	height: 490px;
 	overflow: auto;
 }
 .record-info-content::-webkit-scrollbar {
