--- a/webapp/assets/css/course-write.css
+++ b/webapp/assets/css/course-write.css
@@ -93,9 +93,10 @@ input[type=radio] {display:none;}
 	border:  1px solid rgb(223, 223, 223);
 }
 .txt-long {width: 100%;}
-.txt-short {width: 80px; margin: 0px 12px 0px 0px;}
+.txt-short {width: 100px; margin: 0px 12px 0px 0px;}
 .margin-left{margin-left: 50px;}
 input[name="address"] {width: 89%;}
+/* input number에 화살표 없애는거 */
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
