--- a/webapp/assets/css/best.css
+++ b/webapp/assets/css/best.css
@@ -44,6 +44,11 @@ table td:hover {
 
 
 /* ------------- 종목테그 ------------- */
+#cate-menu {
+	width:100%;
+	height: 100px;
+}
+
 .best-mini-list {
 	font-size: 12px;
 	float: right;
@@ -72,6 +77,7 @@ table td:hover {
 /* hr(nav) 라인 */
 #hr {
 	width: 1100px;
+	margin-top:0px;
 }
 
 /*------------------------- Top1~3 -------------------------*/
