--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -11,7 +11,7 @@ input[type=radio] {display:none;}
 /* =======================레이아웃======================= */
 #header {left:0; z-index: 1;  /* top:0; */ /* position: fixed; */ width:100%; background-color:white;}
 #wrap {position: relative; /* height: 100vh; */ /* margin:auto; */ }
-#content {/* position: relative; */ padding:50px 0px; margin:auto; margin-bottom:150px; max-width:1200px; min-height:80vh; 
+#content {/* position: relative; */ padding:50px 0px; margin:auto; /* margin-bottom:150px; */ max-width:1200px; min-height:80vh; 
 				-ms-overflow-style: none; /* IE and Edge */
    					scrollbar-width: none; /* Firefox */
    					object-fit: cover; }
@@ -59,7 +59,7 @@ input[type=radio] {display:none;}
 /* 마이페이지-메뉴바 *************************************************************/
 /**************************************************************************/
 /* .menuBar-display {width:1200px; background-color:none;} */
-#menuBar { width:400px; min-height: 100%; position: absolute; /*fixed*/ 
+#menuBar { width:400px; min-height:100%; position: absolute; /*fixed*/ 
 			z-index: 900; /* Stay on top */
 			/* top: 80px; */  /* Stay at the top */
 			/* left: 0; */
@@ -77,7 +77,7 @@ input[type=radio] {display:none;}
    					}
 
 
-.entireMenu{ position: sticky; top: 0; overflow: scroll;}
+.entireMenu{ position: sticky; top: 0; /* overflow: scroll; */}
 
 #menuBar .menu1 { border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
 #menuBar .menu1 #mypage {font-size: 18px; font-weight:bold;float:left; }
@@ -86,7 +86,7 @@ input[type=radio] {display:none;}
 #menuBar .menu1 .menuBar-close-btn {width: 20px; height: 20px; }
 
 
-#menuBar .menu2 { border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
+#menuBar .menu2 {border-bottom:solid 1px #000000; text-align:left;  padding:20px 30px; }
 #menuBar .menu2 #bookmark {font-size: 18px; float:left; font-weight:bold;}
 #menuBar .bmStar {width: 20px; height: 20px;}
 #menuBar .menu2 .bookmark-btn {text-align:right;}
