--- a/webapp/assets/css/writeForm.css
+++ b/webapp/assets/css/writeForm.css
@@ -81,6 +81,13 @@ h1 {
 	border:none;
 	color: white;
 }
+.fav, .co {
+	cursor: pointer;
+	margin-bottom: 6px;
+	margin-left: 12px;
+	margin-top: 6px;
+	font-size: 11.2pt;
+}
 
 /********************* 사진 등록 *********************/
 
