--- a/webapp/assets/css/writeForm.css
+++ b/webapp/assets/css/writeForm.css
@@ -88,6 +88,9 @@ h1 {
 	margin-top: 6px;
 	font-size: 11.2pt;
 }
+.blackBtn {
+	color: #000 !important;
+}
 
 /********************* 사진 등록 *********************/
 
@@ -204,7 +207,7 @@ h1 {
 	color: #c0c0c0;
 	font-size : 13pt;
 }
-#save {
+#c-save, #t-save {
 	margin-bottom: 3px;
 	margin-right: 38px;
 	float: right;
