함께하기 손 좀 봄 ㅎㅎ

--- a/webapp/assets/css/together_read.css
+++ b/webapp/assets/css/together_read.css
@@ -148,6 +148,11 @@ tr {height: 100px}
 	margin-left: 10px;
 	margin-top: 3px;
 }
+
+.mention {
+	font-weight: 900;
+}
+
 #comment_, #comment_btn, #REcomment_btn {
 	font-size : 12pt;
 	margin-left: 10px;
