--- a/webapp/assets/css/best.css
+++ b/webapp/assets/css/best.css
@@ -150,7 +150,7 @@ table td:hover {
 	font-family:verdana, sans-serif;
 	text-align: center;
 	font-weight: bold;
-	background-color: rgba( 255, 255, 255, 0.5 );
+	background-color: rgba( 255, 255, 255, 0.5);
 }
 
 .img-line .img-cont:hover .textbox {
@@ -171,7 +171,7 @@ table td:hover {
 .comment-text {
 	width: 80px;
 	padding: 0px 35px 50px;
-	text-align: left;
+	text-align: center;
 	display: inline;
 }
 
@@ -185,7 +185,7 @@ table td:hover {
 	border:1px solid rgb(101, 101, 101);
 	border-radius: 2px;
 	margin-top: 3px;
-	margin-left: 17px;
+	margin-left: 8px;
 	padding: 2px;
 }
 
