--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -160,11 +160,12 @@ input[type=radio] {display:none;}
 }
 .modal-dialog {
 	width: 300px;
+	margin: auto;
 	height: auto;
-	position: fixed;
+	position: relative;
 	top: 20%;
-	left: 40%;
-	transform: translate(-50%, -50%);
+	/* left: 40%; */
+	/* transform: translate(-50%, -50%); */
 }
 .modal-body {
 	padding: 16px 24px;
