함게하기 코스 불러오기

--- a/webapp/assets/css/together-write.css
+++ b/webapp/assets/css/together-write.css
@@ -242,7 +242,7 @@ p>.gary {
 	color: #c0c0c0;
 	font-size : 13pt;
 }
-#save {
+#c-save {
 	margin-bottom: 3px;
 	margin-right: 38px;
 	float: right;
