--- a/webapp/assets/css/together_read.css
+++ b/webapp/assets/css/together_read.css
@@ -82,43 +82,17 @@ tr {height: 100px}
 	display :inline-block;
 	margin-right: 8px;
 }
-#writer_btnM {margin-left: 79.5%;}
-#modify_m {
-	width : 82px;
-	height: 35px;
-	background-color: #dedede;
-	color: #666;
-	border:none;
-}
+#writer_btnM {margin-left: 85.5%;}
 #delete_m {
+	display: inline-block;
 	width : 82px;
 	height: 35px;
 	background-color: #000;
 	color: #fff;
-	border:none;
-}
-/******/
-#writer_btnS {
-	margin-top: 2px;
-	margin-bottom: 15px;
-	display :inline-block;
-}
-#modify_s {
-	width : 23px;
-	height: 30px;
-	background-color: #fff;
-	color: #666;
-	font-size : 10pt;
-	border:none;
-}
-#delete_s {
-	margin-left: 1px;
-	width : 23px;
-	height: 30px;
-	background-color: #fff;
-	color: #666;
-	font-size : 10pt;
-	border:none;
+	border: none;
+	border-radius: 5px;
+	text-align: center;
+	line-height: 35px;
 }
 
 /********************** 댓글 **********************/
@@ -136,6 +110,7 @@ tr {height: 100px}
 	width : 75%;
 	border-top: solid 2px #ccc;
 	border-bottom: solid 2px #ccc;
+	padding-bottom: 20px;
 }
 .id {
 	font-size : 14pt;
