--- a/webapp/assets/css/best.css
+++ b/webapp/assets/css/best.css
@@ -37,6 +37,7 @@ table td {
 
 table td:hover {
 	background-color: #000000;
+	border: 1px solid #000;
 	color: #fff;
 	font-weight: bold;
 	cursor: pointer;
@@ -76,9 +77,10 @@ table td:hover {
 }	
 
 /* hr(nav) 라인 */
-#hr {
+.hr {
 	width: 1100px;
 	margin-top:0px;
+	clear: both;
 }
 
 /*------------------------- Top1~3 -------------------------*/
