--- a/webapp/assets/css/list.css
+++ b/webapp/assets/css/list.css
@@ -26,9 +26,10 @@
 }
 
 #page {
+	display: flex;
+	justify-content: center;
 	margin-top: 20px;
 	margin-bottom: 70px;
-	margin-left: 39%;
 }
 
 /******************** 공지사항 p ********************/
