--- a/webapp/assets/css/my-page.css
+++ b/webapp/assets/css/my-page.css
@@ -10,7 +10,7 @@ body {font-size: 14px; }
 input[type=radio] {display:none;}
 /* =======================레이아웃======================= */
 #header {left:0; z-index: 1;  /* top:0; */ /* position: fixed; */ width:100%; background-color:white;}
-#wrap {position: relative; /* height: 100vh; */ /* margin:auto; */ }
+#wrap {position: relative; min-height: 100vh; /* margin:auto; */ }
 #content {/* position: relative; */ padding:50px 0px; margin:auto; /* margin-bottom:150px; */ max-width:1200px; min-height:100vh; 
 				-ms-overflow-style: none; /* IE and Edge */
    					scrollbar-width: none; /* Firefox */
@@ -111,7 +111,7 @@ input[type=radio] {display:none;}
 /**************************************************************************/
 /* 마이페이지-나의 기록 *************************************************************/
 /**************************************************************************/
-.myReport {position: absolute; left: 50%; transform: translateX(-50%); display: center; text-align:center; 
+.myReport {position: relative; left: 50%; transform: translateX(-50%); display: center; text-align:center; 
 			width:1200px; padding:0px 30px;}
 
 .myReport #calendar {float:left; width:750px; line-height: 50px; }
